# PdfiumAndroid

./: README.md  build.gradle  publish.sh
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt  mainJNILib.cpp
src/main/cpp/include/utils/: Errors.h  Mutex.h
src/main/java/com/shockwave/pdfium/: PdfDocument.java  PdfiumCore.java
